nacos/service.yaml
## 改完用NodePort类型的Service，本地用ingress不好使
apiVersion: v1
kind: Service
metadata:
  name: nacos-service
spec:
  selector:
    app: nacos
  type: NodePort
  ports:
    - port: 8848
      targetPort: 8848
      nodePort: 30848
      protocol: TCP
